Sound effects added!

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <img class="sprite" src="images/ninja-dead.png" id="ninja-dead-sprite">
         <img class="sprite" src="images/background.jpg" id="background">
         <img src="images/game-over.png" id="game-over">
+		<img src="images/sound-on.png" class="sound" id="soundOn"/>
+        <img src="images/sound-off.png" class="sound" id="soundOff"/>
         
         <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
             crossorigin="anonymous"></script>
@@ -35,6 +37,8 @@
         <script src="js/gameEngine.js"></script>
         <script src="js/how-to-play.js"></script>
         <script src="js/menu.js"></script>
+        <script src="js/sound.js"></script>
+
     </div>
 </body>
 
