some small changes

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <img class="sprite" src="images/background.jpg" id="background">
         <img src="images/game-over.png" id="game-over">
         <span class="score">Score:<span class="scoreValue">0</span></span>
-        <img src="images/sound-on.png" class="sound" id="soundOn" />
-        <img src="images/sound-off.png" class="sound" id="soundOff" />
+        <img src="images/sound-on2.png" class="sound" id="soundOn" />
+        <img src="images/sound-off2.png" class="sound" id="soundOff" />
 
         <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
@@ -33,11 +33,10 @@
         <script src="js/enemyGenerator.js"></script>
         <script src="js/background.js"></script>
         <script src="js/restart-game.js"></script>
-        <script src="js/gameEngine.js"></script>
         <script src="js/how-to-play.js"></script>
         <script src="js/menu.js"></script>
         <script src="js/sound.js"></script>
-
+        <script src="js/gameEngine.js"></script>
     </div>
 </body>
 
