--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         <img src="images/sound-on2.png" class="sound" id="soundOn" />
         <img src="images/sound-off2.png" class="sound" id="soundOff" />
 
+        <svg id="Capa_1" viewbox="0 0 400 50">
+            <g id="main-svg-icon">
+            <path style="fill:#C03A2B;" d="M24.85,10.126c2.018-4.783,6.628-8.125,11.99-8.125c7.223,0,12.425,6.179,13.079,13.543 c0,0,0.353,1.828-0.424,5.119c-1.058,4.482-3.545,8.464-6.898,11.503L24.85,48L7.402,32.165c-3.353-3.038-5.84-7.021-6.898-11.503 c-0.777-3.291-0.424-5.119-0.424-5.119C0.734,8.179,5.936,2,13.159,2C18.522,2,22.832,5.343,24.85,10.126z"/>
+            <path style="fill:#ED7161;" d="M6,18.078c-0.553,0-1-0.447-1-1c0-5.514,4.486-10,10-10c0.553,0,1,0.447,1,1s-0.447,1-1,1 c-4.411,0-8,3.589-8,8C7,17.631,6.553,18.078,6,18.078z"/>
+            </g>
+        </svg>
+
         <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
         </script>
@@ -36,6 +43,8 @@
         <script src="js/how-to-play.js"></script>
         <script src="js/menu.js"></script>
         <script src="js/sound.js"></script>
+        <script src="js/svg.js"></script>
+        <script src="js/loseLife.js"></script>
         <script src="js/gameEngine.js"></script>
     </div>
 </body>
